# docx-format-engine

./: .gitignore  README.md  __init__.py
word_format_tool/: .gitignore  AGENT_INTEGRATION.md  DEVELOPMENT.md  MANIFEST.in  README.md  __init__.py  pyproject.toml
word_format_tool/docs/: agent-structure-operations-design.md  agent-structure-operations-implementation-plan.md  format-safety-v2-design.md  precision-safety-design.md  reference-crosslinks-design.md
word_format_tool/examples/: layout_expectations.example.json  operations.example.json  rules.example.json  template_profile.example.json
word_format_tool/tests/: conftest.py  test_agent_integration_contract.py  test_agent_structure_operations.py  test_conversion.py  test_document_analyzer.py  test_format_fixer.py  test_format_inspector.py  test_format_safety_v2.py  test_ooxml_utils.py  test_reference_links.py  test_reports_and_cli.py  test_rule_loader.py  test_template_profiler.py  test_template_workflow.py
word_format_tool/word_format_tool/: __init__.py  cli.py  constants.py  conversion.py  document_analyzer.py  document_io.py  exceptions.py  format_fixer.py  format_inspector.py  layout_safety.py  layout_validator.py  models.py  module_tools.py  ooxml_utils.py  optional_word_backend.py  paragraph_locator.py  reference_links.py  report_writer.py  rule_loader.py  structure_inspector.py  structure_operations.py  structure_tools.py  template_profiler.py  template_rules.py  toc_repair.py  visual_compare.py  workflow.py
